# django-logikal

./: .copier-answers.yml  .gitignore  LICENSE.txt  README.md  README.rst  compose.yml  pyproject.toml
.github/workflows/: publish-release.yml  test-pull-request.yml
cloud/: .terraform.lock.hcl  config.hcl  main.tf  outputs.tf  terragrunt.hcl  variables.tf
django_logikal/: apps.py  auth.py  bibliography.py  email.py  env.py  local_data.py  logging.py  manage.py  middleware.py  migrations.py  models.py  pyproject.py  run.py  security.py  sitemap.py  static.py  urls.py  validation.py  views.py
django_logikal/babel/: django.ini  django.toml  djangojs.toml  jinja.py
django_logikal/components/: commons.py
django_logikal/forms/: account.py  allauth.py  fields.py  generic.py  widgets.py
django_logikal/management/commands/: generate.py  syncdb.py  translate.py
django_logikal/migration/operations/: __init__.py  model.py  schema.py  table.py  user.py
django_logikal/models/: base.py  text_choices.py
django_logikal/settings/: __init__.py  base.py  dynamic_site.py  production.py  static_site.py  testing.py
django_logikal/settings/common/: base.py  dev.py  production.py  testing.py
django_logikal/settings/dynamic_site/: base.py  dev.py  production.py  testing.py
django_logikal/settings/static_site/: base.py  dev.py  testing.py
django_logikal/static/django_logikal/: fonts.css
django_logikal/static/django_logikal/css/: auth.css  baseline.css  commons.css  fonts.css  forms.css  layout.css  text.css  validation.css  validation_error.css  variables.css
django_logikal/static/django_logikal/css/components/: auth.css  common.css
django_logikal/static/django_logikal/css/themes/: standard-dark.css  standard-light.css
django_logikal/static/django_logikal/js/: commons.js  commons.mjs  gettext.mjs
django_logikal/templates/: __init__.py  components.py  extensions.py  filters.py  functions.py  jinja.py  menu.py  processors.py  stylesheet.py  template.py  tests.py
django_logikal/templates/account/messages/: logged_out.txt
django_logikal/templates/admin/: base.html
django_logikal/templates/debug_toolbar/: base.html
django_logikal/templates/django_logikal/: base.html.j  validation_error.html.j
django_logikal/templates/django_logikal/components/: auth.html.j  commons.html.j  test.html.j  text.html.j
django_logikal/templates/django_logikal/email/: base.html.j
django_logikal/templates/django_logikal/forms/: attrs.html.j  field.html.j  form.html.j  label.html.j
django_logikal/templates/django_logikal/forms/errors/list/: default.html.j
django_logikal/templates/django_logikal/forms/widgets/: input.html.j  password.html.j
django_logikal/templates/rest_framework/: api.html  base.html
django_logikal/views/: account.py  allauth.py  generic.py
docs/: commands.rst  components.rst  conf.py  emails.rst  environment.rst  forms.rst  index.rst  license.rst  middleware.rst  migrations.rst  package-lock.json  settings.rst  style_system.rst  templates.rst  urls.rst  views.rst
docs/components/: auth.rst  commons.rst  text.rst
docs/jinja/: directives.py  domain.py  elements.py  format.py
docs/static/css/: copybutton.css  jinja.css
requirements/: core.txt  dev.txt  docs.txt
requirements/extras/: auth.txt  bibliography.txt  dynamic.txt  htmx.txt  rest.txt  static.txt
tests/django_logikal/: conftest.py  factories.py  scenarios.py  test_apps.py  test_dynamic_site.py  test_email.py  test_forms.py  test_logging.py  test_manage.py  test_migrations.py  test_run.py  test_settings.py  test_static_site.py  test_toolbar.py  test_validation.py
tests/django_logikal/components/: __init__.py  conftest.py  test_commons.py  test_text.py
tests/django_logikal/dynamic_site/: conftest.py  test_api.py  test_auth.py  test_commands.py  test_features.py  test_settings.py  test_utilities.py
tests/django_logikal/migration/: test_writer.py
tests/django_logikal/migration/operations/: conftest.py  test_model.py  test_schema.py  test_table.py  test_user.py  utils.py
tests/django_logikal/migrations/: migration.py
tests/django_logikal/templates/: test_components.py  test_filters.py  test_functions.py  test_jinja.py  test_stylesheet.py  test_template.py  test_tests.py
tests/dynamic_site/: admin.py  apps.py  attachment.txt  local_data.py  menu.py  models.py  urls.py  views.py
tests/dynamic_site/locale/: django.pot  djangojs.pot
tests/dynamic_site/locale/en_GB/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
tests/dynamic_site/migrations/: 0001_initial.py  0002_update_site.py  0003_add_robots_rules.py  0004_migration_operations.py
tests/dynamic_site/settings/: app.py  dev.py  local.py  production.py  testing.py
tests/dynamic_site/static/: style.css
tests/dynamic_site/static/css/: style.css
tests/dynamic_site/static/email/: style.css  style_head.css
tests/dynamic_site/templates/: 404.html.j  500.html.j
tests/dynamic_site/templates/account/: account.html.j  auth.html.j  email_confirm.html.j  login.html.j  password_change.html.j  password_reset.html.j  password_reset_done.html.j  password_reset_from_key.html.j  password_set.html.j  signup.html.j  verification_sent.html.j
tests/dynamic_site/templates/dynamic_site/: auth.html.j  base.html.j  email.html.j  home.html.j  index.html.j  internal.html.j  invalid-html.html.j  jinja.html.j  macros.html.j  models.html.j  partials.html.j  references.bib  templates.html.j
tests/dynamic_site/templates/dynamic_site/email/: test_email.html.j  test_email.md
tests/dynamic_site/templates/dynamic_site_localized/: localization.html.j
tests/static_site/: models.py  urls.py
tests/static_site/locale/: django.pot  djangojs.pot
tests/static_site/locale/en_GB/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
tests/static_site/migrations/: 0001_initial.py  0002_update_site.py
tests/static_site/settings/: app.py  dev.py  local.py
tests/static_site/static/: style.css
tests/static_site/templates/: base.html.j  index.html.j  localization.html.j  subpage.html.j  test.html.j
