[build-system]
requires = ['setuptools>=64', 'setuptools-scm>=8']
build-backend = 'setuptools.build_meta'

[project]
name = 'django-logikal'
description = 'Django utilities used at Logikal'
readme = 'README.rst'
requires-python = '~= 3.12'
license = 'MIT'
authors = [{name = 'Logikal GmbH', email = 'contact@logikal.io'}]
keywords = ['python', 'django']
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.12',
  'Framework :: Django',
  'Framework :: Django :: 5',
  'Topic :: Software Development',
  'Topic :: Utilities',
  'Typing :: Typed',
]
dynamic = ['version', 'dependencies', 'optional-dependencies']

[project.scripts]
run = 'django_logikal.run:main'
manage = 'django_logikal.manage:main'

[project.urls]
'Documentation' = 'https://docs.logikal.io/django-logikal/'
'Release notes' = 'https://github.com/logikal-io/django-logikal/releases'
'Issue tracker' = 'https://github.com/logikal-io/django-logikal/issues'
'Source code' = 'https://github.com/logikal-io/django-logikal'

[tool.setuptools.dynamic]
dependencies = {file = 'requirements/core.txt'}

[tool.setuptools.dynamic.optional-dependencies]
static = {file = 'requirements/extras/static.txt'}
dynamic = {file = 'requirements/extras/dynamic.txt'}
rest = {file = 'requirements/extras/rest.txt'}
bibliography = {file = 'requirements/extras/bibliography.txt'}

[tool.setuptools]
packages = [
  'django_logikal',
  'django_logikal.babel',
  'django_logikal.management',
  'django_logikal.management.commands',
  'django_logikal.migration',
  'django_logikal.migration.operations',
  'django_logikal.settings',
  'django_logikal.settings.common',
  'django_logikal.settings.dynamic_site',
  'django_logikal.settings.static_site',
  'django_logikal.static.django_logikal',
  'django_logikal.static.django_logikal.fonts',
  'django_logikal.templates',
  'django_logikal.templates.admin',
  'django_logikal.templates.debug_toolbar',
  'django_logikal.templates.django_logikal',
  'django_logikal.templates.django_logikal.email',
  'django_logikal.templates.rest_framework',
]

[tool.setuptools_scm]

[tool.pytest]
addopts = ['--ignore=static']
DJANGO_SETTINGS_MODULE = 'tests.dynamic_site.settings.testing'

[tool.django_logikal]
DJANGO_SETTINGS_MODULE = 'tests.dynamic_site.settings.dev'

[tool.django_logikal.run]
default_address_port = '127.0.0.1:8000'

[tool.django_logikal.translate]
apps = ['dynamic_site']
contact = 'Gergely Kalmár <contact@logikal.io>'
copyright = 'Logikal GmbH'

[tool.docs]
parallel = false  # parallel builds do not work with automatic docker compose service starting

[tool.browser.versions]
chrome = '139.0.7258.68'

[tool.mypy]
plugins = ['mypy_django_plugin.main']
untyped_calls_exclude = ['factory', 'tests.django_logikal.factories']

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  'antimarkdown.*',
  'anymail.message',
  'debug_toolbar',
  'django_distill',
  'django_migration_linter',
  'docker.*',
  'factory.*',
  'markdownify',
  'premailer',
  'pybtex.*',
  'robots.*',
  'rest_framework.*',
  'simple_history.*',
]

[tool.coverage.run]
patch = ['subprocess']

[tool.pylint.BASIC]
good-names = ['rf', 'to', 'cc']

[tool.stormware]
organization = 'logikal.io'
project = 'django'
