[build-system]
requires = ['setuptools>=64', 'setuptools-scm>=8']
build-backend = 'setuptools.build_meta'

[project]
name = 'django-logikal'
description = 'Django utilities used at Logikal'
readme = 'README.rst'
requires-python = '~= 3.12'
license = 'MIT'
authors = [{name = 'Logikal GmbH', email = 'contact@logikal.io'}]
keywords = ['python', 'django']
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.12',
  'Framework :: Django',
  'Framework :: Django :: 6',
  'Topic :: Software Development',
  'Topic :: Utilities',
  'Typing :: Typed',
]
dynamic = ['version', 'dependencies', 'optional-dependencies']

[project.scripts]
run = 'django_logikal.run:main'
manage = 'django_logikal.manage:main'

[project.urls]
'Documentation' = 'https://docs.logikal.io/django-logikal/'
'Release notes' = 'https://github.com/logikal-io/django-logikal/releases'
'Issue tracker' = 'https://github.com/logikal-io/django-logikal/issues'
'Source code' = 'https://github.com/logikal-io/django-logikal'

[tool.setuptools.dynamic]
dependencies = {file = 'requirements/core.txt'}

[tool.setuptools.dynamic.optional-dependencies]
static = {file = 'requirements/extras/static.txt'}
dynamic = {file = 'requirements/extras/dynamic.txt'}
auth = {file = 'requirements/extras/auth.txt'}
htmx = {file = 'requirements/extras/htmx.txt'}
rest = {file = 'requirements/extras/rest.txt'}
bibliography = {file = 'requirements/extras/bibliography.txt'}

[tool.setuptools]
packages = [
  'django_logikal',
  'django_logikal.babel',
  'django_logikal.forms',
  'django_logikal.management',
  'django_logikal.management.commands',
  'django_logikal.migration',
  'django_logikal.migration.operations',
  'django_logikal.models',
  'django_logikal.settings',
  'django_logikal.settings.common',
  'django_logikal.settings.dynamic_site',
  'django_logikal.settings.static_site',
  'django_logikal.static.django_logikal',
  'django_logikal.static.django_logikal.css',
  'django_logikal.static.django_logikal.css.themes',
  'django_logikal.static.django_logikal.fonts',
  'django_logikal.static.django_logikal.icons',
  'django_logikal.static.django_logikal.js',
  'django_logikal.templates',
  'django_logikal.templates.admin',
  'django_logikal.templates.debug_toolbar',
  'django_logikal.templates.django_logikal',
  'django_logikal.templates.django_logikal.components',
  'django_logikal.templates.django_logikal.email',
  'django_logikal.templates.rest_framework',
  'django_logikal.views',
]

[tool.setuptools_scm]

[tool.pytest]
addopts = ['--ignore=static', '--ignore=docs/static/components', '--no-docs']
norecursedirs = ['*.egg', '.*', 'build', 'dist', 'node_modules']
frozen_time = '2025-01-25 14:30:55'

DJANGO_SETTINGS_MODULE = 'tests.dynamic_site.settings.testing'

[tool.django_logikal]
DJANGO_SETTINGS_MODULE = 'tests.dynamic_site.settings.dev'

[tool.django_logikal.run]
default_address_port = 'localhost:8000'  # must be localhost for Microsoft OAuth flow to work

[tool.django_logikal.translate]
apps = ['dynamic_site']
contact = 'Gergely Kalmár <contact@logikal.io>'
copyright = 'Logikal GmbH'

[tool.django_logikal.auth.social_providers]
google = 'Google'
microsoft = 'Microsoft'

[tool.django_logikal.validate]
skipped_routes = ['account/.*']  # TODO: remove

[tool.docs]
parallel = false  # parallel builds do not work with automatic docker compose service starting

[tool.browser.versions]
chrome = '145.0.7632.117'

[tool.mypy]
plugins = ['mypy_django_plugin.main']
untyped_calls_exclude = ['factory', 'tests.django_logikal.factories']

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  'antimarkdown.*',
  'anymail.message',
  'debug_toolbar',
  'django.middleware.csp',  # see https://github.com/typeddjango/django-stubs/issues/2944
  'django.utils.csp',  # see https://github.com/typeddjango/django-stubs/issues/2944
  'django_distill',
  'django_migration_linter',
  'docker.*',
  'factory.*',
  'markdownify',
  'premailer',
  'pybtex.*',
  'robots.*',
  'rest_framework.*',
  'simple_history.*',
  'tinycss2',
]

[tool.coverage.run]
patch = ['subprocess']

[tool.coverage.report]
omit = ['docs/*.py', 'docs/jinja/*.py']

[tool.pylint.BASIC]
good-names = ['rf', 'to', 'cc']

[tool.stormware]
organization = 'logikal.io'
project = 'django'
